<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvNomeJogadorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomeJogador"/>

    <TextView
        android:id="@+id/tvNomeJogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/tvSexoJogadorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexoJogador"/>

    <TextView
        android:id="@+id/tvSexoJogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/tvPaisJogadorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pais"/>

    <TextView
        android:id="@+id/tvPaisJogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecioneElemento"/>

    <Spinner
        android:id="@+id/spPaises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/elementos"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/customButton"
        android:text="@string/jogar"/>


</LinearLayout>